kubernetes/load-simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-simulator-service
spec:
  selector:
    app: load-simulator
  ports:
  - port: 8080
    targetPort: 8080
